--- a/src/components/Bingo/Bingo.module.sass
+++ b/src/components/Bingo/Bingo.module.sass
@@ -4,8 +4,12 @@
   gap: 30px
 
   .playfield
-    width: 745px
-    height: 745px
     gap: 5px
     display: flex
     flex-wrap: wrap
+
+  .side
+    flex-grow: 1
+    display: flex
+    flex-direction: column
+    gap: 5px
