--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -5,6 +5,8 @@
 body
   font-family: "Nunito", sans-serif
   font-weight: 400
+  background-color: #292929
+  color: #ececec
 
 button
   font-family: "Nunito", sans-serif
