--- a/src/components/Bingo/Card/Card.module.sass
+++ b/src/components/Bingo/Card/Card.module.sass
@@ -1,7 +1,39 @@
 .Card
   width: 120px
   height: 120px
-  border: 1px solid black
-  border-radius: 5px
+  position: relative
+  border-radius: 3px
   box-sizing: border-box
   padding: 5px
+  background-color: #494848
+  cursor: pointer
+  box-shadow: 0px 3px 10px black
+  transition: .15s
+
+  &:hover
+    transform: scale(1.3) rotate(2deg)
+    z-index: 1000
+
+  h1
+    margin-bottom: 5px
+
+  .score
+    position: absolute
+    top: 0
+    right: 0
+    width: 20px
+    height: 20px
+    display: flex
+    justify-content: center
+    align-items: center
+    background-color: rgba(0, 0, 0, 0.3)
+    z-index: 10
+    border-radius: 0 0 0 3px
+
+  .check
+    position: absolute
+    bottom: 0
+    right: 0
+    width: 20px
+    height: 20px
+    margin: 0
